--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
         <cloudHubDeployment>
             <uri>https://anypoint.mulesoft.com</uri>
-            <muleVersion>4.7.0:21e</muleVersion>
+            <muleVersion>4.6-java17</muleVersion>
             <username>waliacoders</username>
             <password>Gingerbread9@gingerbread</password>
             <applicationName>mulesoft-cicd-sample1</applicationName>
